--- a/dotnet/consumer_assign/consumer.csproj
+++ b/dotnet/consumer_assign/consumer.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <StartupObject>Consumer</StartupObject>
+    <StartupObject>ConsumerAssign</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
